@@ -1,14 +1,8 @@
 package com.ultreon.craft.world;
 
-import static com.ultreon.craft.UltreonCraft.LOGGER;
-
-import com.google.common.base.Preconditions;
-import com.ultreon.libs.commons.v0.vector.Vec3d;
-import com.ultreon.libs.commons.v0.vector.Vec3i;
-import com.badlogic.gdx.math.Vector3;
-import com.ultreon.craft.util.BoundingBox;
-import com.ultreon.craft.util.Ray;
+import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.utils.Disposable;
+import com.google.common.base.Preconditions;
 import com.google.errorprone.annotations.CanIgnoreReturnValue;
 import com.ultreon.craft.Constants;
 import com.ultreon.craft.Task;
@@ -21,41 +15,36 @@ import com.ultreon.craft.entity.Player;
 import com.ultreon.craft.events.BlockEvents;
 import com.ultreon.craft.events.WorldEvents;
 import com.ultreon.craft.input.GameInput;
-import com.ultreon.craft.util.HitResult;
-import com.ultreon.craft.util.Utils;
-import com.ultreon.craft.util.WorldRayCaster;
+import com.ultreon.craft.util.*;
 import com.ultreon.craft.util.exceptions.ValueMismatchException;
 import com.ultreon.craft.world.gen.BiomeGenerator;
 import com.ultreon.craft.world.gen.TerrainGenerator;
 import com.ultreon.craft.world.gen.WorldGenInfo;
-import com.ultreon.craft.world.gen.layer.AirTerrainLayer;
-import com.ultreon.craft.world.gen.layer.StoneTerrainLayer;
-import com.ultreon.craft.world.gen.layer.SurfaceTerrainLayer;
-import com.ultreon.craft.world.gen.layer.UndergroundTerrainLayer;
-import com.ultreon.craft.world.gen.layer.WaterTerrainLayer;
+import com.ultreon.craft.world.gen.layer.*;
 import com.ultreon.craft.world.gen.noise.DomainWarping;
 import com.ultreon.craft.world.gen.noise.NoiseSettingsInit;
 import com.ultreon.data.types.ListType;
 import com.ultreon.data.types.MapType;
 import com.ultreon.libs.commons.v0.Identifier;
+import com.ultreon.libs.commons.v0.vector.Vec3d;
+import com.ultreon.libs.commons.v0.vector.Vec3i;
 import com.ultreon.libs.crash.v0.CrashCategory;
 import com.ultreon.libs.crash.v0.CrashLog;
-
+import it.unimi.dsi.fastutil.ints.Int2ReferenceArrayMap;
+import it.unimi.dsi.fastutil.ints.Int2ReferenceMap;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.slf4j.Marker;
+import org.slf4j.MarkerFactory;
 
+import javax.annotation.ParametersAreNonnullByDefault;
 import java.io.IOException;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.stream.Collectors;
 
-import it.unimi.dsi.fastutil.ints.Int2ReferenceArrayMap;
-import it.unimi.dsi.fastutil.ints.Int2ReferenceMap;
-import org.slf4j.Marker;
-import org.slf4j.MarkerFactory;
-
-import javax.annotation.ParametersAreNonnullByDefault;
+import static com.ultreon.craft.UltreonCraft.LOGGER;
 
 @SuppressWarnings({"UnusedReturnValue", "unused"})
 @ParametersAreNonnullByDefault
@@ -255,14 +244,14 @@ public class World implements Disposable {
 		List<ChunkPos> toCreate = new ArrayList<>();
 		for (int x = startX; x <= endX; x += World.CHUNK_SIZE) {
 			for (int z = startZ; z <= endZ; z += World.CHUNK_SIZE) {
-				ChunkPos chunkPos = Utils.chunkPosFromBlockCoords(new Vector3(x, 0, z));
+				ChunkPos chunkPos = Utils.chunkPosFromBlockCoords(new Vec3d(x, 0, z));
 				toCreate.add(chunkPos);
 				if (x >= pos.x - World.CHUNK_SIZE
 						&& x <= pos.x + World.CHUNK_SIZE
 						&& z >= pos.z - World.CHUNK_SIZE
 						&& z <= pos.z + World.CHUNK_SIZE) {
 					for (int y = -World.CHUNK_HEIGHT; y >= pos.y - World.CHUNK_HEIGHT * 2; y -= World.CHUNK_HEIGHT) {
-						chunkPos = Utils.chunkPosFromBlockCoords(new Vector3(x, y, z));
+						chunkPos = Utils.chunkPosFromBlockCoords(new Vec3d(x, y, z));
 						toCreate.add(chunkPos);
 					}
 				}
@@ -281,7 +270,7 @@ public class World implements Disposable {
 		for (ChunkPos pos : this.getLoadedChunks().stream().map(chunk -> chunk.pos).filter(pos -> {
 			Chunk chunk = this.getChunk(pos);
 			return chunk != null && !needed.contains(pos);
-		}).collect(Collectors.toList())) {
+		}).toList()) {
 			if (this.getChunk(pos) != null) {
 				toRemove.add(pos);
 			}
@@ -474,8 +463,7 @@ public class World implements Disposable {
 	}
 
 	public HitResult rayCast(Ray ray, float distance) {
-		HitResult hitResult = new HitResult(ray);
-		hitResult.distanceMax = distance;
+		HitResult hitResult = new HitResult(ray, distance);
 		return WorldRayCaster.rayCast(hitResult, this);
 	}
 
@@ -639,8 +627,8 @@ public class World implements Disposable {
 		}
 	}
 
-	public CompletableFuture<ConcurrentMap<Vector3, Chunk>> generateWorldChunkData(List<ChunkPos> toCreate) {
-		ConcurrentMap<Vector3, Chunk> map = new ConcurrentHashMap<>();
+	public CompletableFuture<ConcurrentMap<Vec3d, Chunk>> generateWorldChunkData(List<ChunkPos> toCreate) {
+		ConcurrentMap<Vec3d, Chunk> map = new ConcurrentHashMap<>();
 		return CompletableFuture.supplyAsync(() -> {
 			for (ChunkPos pos : toCreate) {
 				try {
@@ -793,6 +781,20 @@ public class World implements Disposable {
 		return Collections.unmodifiableCollection(this.chunks.values());
 	}
 
+	private boolean needsUpdateByNeighbour(Chunk chunk) {
+		ChunkPos pos = chunk.pos;
+		boolean needsUpdate = false;
+		needsUpdate |= this.updatesNeighbour(this.getChunk(new ChunkPos(pos.x() - 1, pos.z())));
+		needsUpdate |= this.updatesNeighbour(this.getChunk(new ChunkPos(pos.x() + 1, pos.z())));
+		needsUpdate |= this.updatesNeighbour(this.getChunk(new ChunkPos(pos.x(), pos.z() - 1)));
+		needsUpdate |= this.updatesNeighbour(this.getChunk(new ChunkPos(pos.x(), pos.z() + 1)));
+		return needsUpdate;
+	}
+
+	private boolean updatesNeighbour(Chunk chunk) {
+		return chunk != null && chunk.updateNeighbours;
+	}
+
 	public int getPlayTime() {
 		return this.playTime;
 	}
@@ -824,6 +826,7 @@ public class World implements Disposable {
 			throw new IllegalStateException("Entity already spawned: " + entity);
 		}
 		int newId = oldId > 0 ? oldId : this.nextId();
+		entity.setId(newId);
 	}
 
 	private int nextId() {
@@ -842,7 +845,7 @@ public class World implements Disposable {
 		return this.entities.get(id);
 	}
 
-	public List<BoundingBox> collide(BoundingBox box) {
+	public List<BoundingBox> collide(BoundingBox box, boolean collideFluid) {
 		List<BoundingBox> boxes = new ArrayList<>();
 		int xMin = (int) Math.floor(box.min.x);
 		int xMax = (int) Math.floor(box.max.x);
@@ -855,7 +858,7 @@ public class World implements Disposable {
 			for (int y = yMin; y <= yMax; y++) {
 				for (int z = zMin; z <= zMax; z++) {
 					Block block = this.get(x, y, z);
-					if (block.isSolid()) {
+					if (block.isSolid() && (!collideFluid || block.isFluid())) {
 						BoundingBox blockBox = block.getBoundingBox(x, y, z);
 						if (blockBox.intersects(box)) {
 							boxes.add(blockBox);
@@ -910,6 +913,42 @@ public class World implements Disposable {
 		cat.add("Seed", this.seed); // For weird world generation glitches
 
 		crashLog.addCategory(cat);
+	}
+
+	public boolean intersectEntities(BoundingBox boundingBox) {
+		for (Entity entity : this.entities.values())
+			if (entity.getBoundingBox().intersects(boundingBox)) return true;
+
+		return false;
+	}
+
+	public void startBreaking(Vec3i breaking) {
+		Chunk chunkAt = this.getChunkAt(breaking);
+		if (chunkAt == null) return;
+		Vec3i chunkCoords = this.toLocalBlockPos(breaking);
+		chunkAt.startBreaking(chunkCoords.x, chunkCoords.y, chunkCoords.z);
+	}
+
+	public boolean continueBreaking(Vec3i breaking, float amount) {
+		Chunk chunkAt = this.getChunkAt(breaking);
+		if (chunkAt == null) return false;
+		Vec3i chunkCoords = this.toLocalBlockPos(breaking);
+		chunkAt.continueBreaking(chunkCoords.x, chunkCoords.y, chunkCoords.z, amount);
+		return true;
+	}
+
+	public void stopBreaking(Vec3i breaking) {
+		Chunk chunkAt = this.getChunkAt(breaking);
+		if (chunkAt == null) return;
+		Vec3i chunkCoords = this.toLocalBlockPos(breaking);
+		chunkAt.stopBreaking(chunkCoords.x, chunkCoords.y, chunkCoords.z);
+	}
+
+	public float getBreakProgress(Vec3i pos) {
+		Chunk chunkAt = this.getChunkAt(pos);
+		if (chunkAt == null) return -1.0F;
+		Vec3i chunkCoords = this.toLocalBlockPos(pos);
+		return chunkAt.getBreakProgress(chunkCoords.x, chunkCoords.y, chunkCoords.z);
 	}
 
 	public SavedWorld getSavedWorld() {
